# paradigms-a4

./: .gitignore  CMakeLists.txt  README.md  TextEditor  main.cpp
headers/: CaesarAlgorythm.h  ConsoleProcessor.h  ProgramBackup.h  TextProcessor.h
source/: CaesarAlgorythm.cpp  ConsoleProcessor.cpp  ProgramBackup.cpp  TextProcessor.cpp
